{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 29,
  "lineage": "cda85ea3-97b2-8cfa-5d77-e294d23a0497",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-reconhece_lixo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:142712539440:instance/i-00e776fd7bd85e7c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e776fd7bd85e7c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tcc-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0468395452bccede8",
            "private_dns": "ip-10-0-0-12.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.12",
            "public_dns": "ec2-3-87-179-92.compute-1.amazonaws.com",
            "public_ip": "3.87.179.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-028523b1b186d9425",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4a41aa9956a7e14",
            "tags": {
              "Environment": "prod",
              "Name": "reconhece-lixo",
              "Product": "tcc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "reconhece-lixo",
              "Product": "tcc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f2cd725843e919b6"
            ]
          },
          "dependencies": [
            "aws_key_pair.tcc_key",
            "aws_s3_bucket.s3-reconhecida",
            "aws_security_group.sg-backend",
            "aws_subnet.public-tcc-east_1a",
            "aws_vpc.vpc-tcc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-tcc_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:142712539440:instance/i-0df2880eca832cc93",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0df2880eca832cc93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tcc-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07478c8383f7ef518",
            "private_dns": "ip-10-1-0-7.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.7",
            "public_dns": "ec2-3-235-1-213.compute-1.amazonaws.com",
            "public_ip": "3.235.1.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ac0ec4215cbbcd67",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03a9d15625129f033",
            "tags": {
              "Environment": "prod",
              "Name": "tcc-gateway",
              "Product": "tcc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "tcc-gateway",
              "Product": "tcc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f2cd725843e919b6"
            ]
          },
          "dependencies": [
            "aws_key_pair.tcc_key",
            "aws_s3_bucket.s3-original",
            "aws_security_group.sg-backend",
            "aws_subnet.public-tcc-east_1b",
            "aws_vpc.vpc-tcc",
            "aws_vpc_ipv4_cidr_block_association.vpc-tcc_additional_cidr",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-tcc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142712539440:internet-gateway/igw-04233b2f9d54ff03a",
            "id": "igw-04233b2f9d54ff03a",
            "owner_id": "142712539440",
            "tags": {
              "Environment": "prod",
              "Name": "igw-tcc",
              "Product": "tcc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "igw-tcc",
              "Product": "tcc"
            },
            "vpc_id": "vpc-054265500b103adc4"
          },
          "dependencies": [
            "aws_vpc.vpc-tcc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb-tcc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:142712539440:loadbalancer/app/alb-tcc/b4cb105bc9dd989d",
            "arn_suffix": "app/alb-tcc/b4cb105bc9dd989d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-tcc-420166737.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:142712539440:loadbalancer/app/alb-tcc/b4cb105bc9dd989d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-tcc",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f2cd725843e919b6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03a9d15625129f033"
              },
              {
                "subnet_id": "subnet-0f4a41aa9956a7e14"
              }
            ],
            "subnets": [
              "subnet-03a9d15625129f033",
              "subnet-0f4a41aa9956a7e14"
            ],
            "vpc_id": "vpc-054265500b103adc4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg-backend",
            "aws_subnet.public-tcc-east_1a",
            "aws_subnet.public-tcc-east_1b",
            "aws_vpc.vpc-tcc",
            "aws_vpc_ipv4_cidr_block_association.vpc-tcc_additional_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener-tcc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:142712539440:listener/app/alb-tcc/b4cb105bc9dd989d/e8a2dc4a86aacc92",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:142712539440:targetgroup/tcc-target-group/5586db0feaa44252",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:142712539440:listener/app/alb-tcc/b4cb105bc9dd989d/e8a2dc4a86aacc92",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:142712539440:loadbalancer/app/alb-tcc/b4cb105bc9dd989d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb-tcc",
            "aws_lb_target_group.tg-tcc",
            "aws_security_group.sg-backend",
            "aws_subnet.public-tcc-east_1a",
            "aws_subnet.public-tcc-east_1b",
            "aws_vpc.vpc-tcc",
            "aws_vpc_ipv4_cidr_block_association.vpc-tcc_additional_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-tcc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:142712539440:targetgroup/tcc-target-group/5586db0feaa44252",
            "arn_suffix": "targetgroup/tcc-target-group/5586db0feaa44252",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:142712539440:targetgroup/tcc-target-group/5586db0feaa44252",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tcc-target-group",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-054265500b103adc4"
          },
          "dependencies": [
            "aws_vpc.vpc-tcc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142712539440:route-table/rtb-043f144624f1be253",
            "id": "rtb-043f144624f1be253",
            "owner_id": "142712539440",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04233b2f9d54ff03a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-public"
            },
            "tags_all": {
              "Name": "rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-054265500b103adc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-tcc",
            "aws_vpc.vpc-tcc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dad038021b321a6",
            "route_table_id": "rtb-043f144624f1be253",
            "subnet_id": "subnet-0f4a41aa9956a7e14"
          },
          "dependencies": [
            "aws_internet_gateway.igw-tcc",
            "aws_route_table.rtb-public",
            "aws_subnet.public-tcc-east_1a",
            "aws_vpc.vpc-tcc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-public-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fc699e763cb4f3f",
            "route_table_id": "rtb-043f144624f1be253",
            "subnet_id": "subnet-03a9d15625129f033"
          },
          "dependencies": [
            "aws_internet_gateway.igw-tcc",
            "aws_route_table.rtb-public",
            "aws_subnet.public-tcc-east_1b",
            "aws_vpc.vpc-tcc",
            "aws_vpc_ipv4_cidr_block_association.vpc-tcc_additional_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142712539440:security-group/sg-0f2cd725843e919b6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2cd725843e919b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_backend20251121214944007900000001",
            "name_prefix": "sg_backend",
            "owner_id": "142712539440",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "sg-backend",
              "Product": "tcc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "sg-backend",
              "Product": "tcc"
            },
            "timeouts": null,
            "vpc_id": "vpc-054265500b103adc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-tcc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142712539440:security-group/sg-087fcee0256090f19",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087fcee0256090f19",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_lambda20251121212823627100000001",
            "name_prefix": "sg_lambda",
            "owner_id": "142712539440",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "sg-lambda",
              "Product": "tcc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "sg-lambda",
              "Product": "tcc"
            },
            "timeouts": null,
            "vpc_id": "vpc-054265500b103adc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-tcc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-tcc-east_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142712539440:subnet/subnet-0f4a41aa9956a7e14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4a41aa9956a7e14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "142712539440",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "subnet_public-east_1a",
              "Product": "tcc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "subnet_public-east_1a",
              "Product": "tcc"
            },
            "vpc_id": "vpc-054265500b103adc4"
          },
          "dependencies": [
            "aws_vpc.vpc-tcc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-tcc-east_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142712539440:subnet/subnet-03a9d15625129f033",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a9d15625129f033",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "142712539440",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "subnet_public-east_1b",
              "Product": "tcc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "subnet_public-east_1b",
              "Product": "tcc"
            },
            "vpc_id": "vpc-054265500b103adc4"
          },
          "dependencies": [
            "aws_vpc.vpc-tcc",
            "aws_vpc_ipv4_cidr_block_association.vpc-tcc_additional_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-tcc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142712539440:vpc/vpc-054265500b103adc4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/26",
            "default_network_acl_id": "acl-0c597d4e7570298aa",
            "default_route_table_id": "rtb-04a910866b0ee02c4",
            "default_security_group_id": "sg-0886b0753ca98bcd8",
            "dhcp_options_id": "dopt-0469ee56786f1bbdd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-054265500b103adc4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04a910866b0ee02c4",
            "owner_id": "142712539440",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-tcc",
              "Product": "tcc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-tcc",
              "Product": "tcc"
            }
          }
        }
      ]
    }
  ]
}